--- a/photographer.html
+++ b/photographer.html
@@ -1,37 +1,89 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Photographe</title>
+</head>
+
+<body>
+  <header>
+    <a href="index.html"><img src="assets/images/logo.png" class="logo"
+        aria-label="Fisheye rouge, un appareil photo remplace la première lettre e" role="img" alt="" /></a>
+  </header>
+
+  <main id="main" aria-label="contenu principal" role="main">
+    <section class="photographer_profile" aria-label="description photographe" role="presentation">
+      <button class="contact_button" onclick="displayModal()" aria-label="bouton de contact"
+        role="button">Contactez-moi</button>
+    </section>
+
+    <div class="pictures" aria-label="photo de profil" role="img">
+    </div>
+
+    <span>Trier par</span>
+    <div class="custom-select">
+      <select name="" id="">
+        <option value="1" id="titre">Titre</option>
+        <option value="2" id="date">Date</option>
+        <option value="3" id="likes">Popularité</option>
+      </select>
+    </div>
+
+    <div class="pictures_medias"></div>
+  </main>
+
+  <div id="lightbox" class="lightbox">
+    <img class="closeLightbox" id="closeLightbox" src="assets/icons/closeLightbox.svg" onclick="closeLightbox()"
+      aria-label="bouton de fermeture" role="fermeture" />
+    <img class="arrow_left" src="assets/icons/left.svg" aria-label="media précédent" role="navigation"
+      alt="media précédent" />
+    <img src="assets/icons/right.svg" class="arrow_right" aria-label="media suivant" role="navigation"
+      alt="media suivant" />
+    <div class="lightbox_container" aria-label="affichage des medias" role="img">
+    </div>
+  </div>
+
+  <div class="box">
+  </div>
+
+  <div id="contact_modal">
+    <div class="modal">
+      <header>
+        <h2>Contactez-moi</h2>
+        <img src="assets/icons/close.svg" onclick="closeModal()" aria-label="bouton de fermeture" role="fermeture" />
+      </header>
+      <form>
+        <div>
+          <label>Prénom</label>
+          <input id="prenom" />
+        </div>
+        <div>
+          <label>Nom</label>
+          <input id="nom" />
+        </div>
+        <div>
+          <label>Email</label>
+          <input id="email" />
+        </div>
+        <div>
+          <label>Votre message</label>
+          <input id="message" />
+        </div>
+        <button class="contact_button" id="submit">
+          Envoyer
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <script src="scripts/utils/lightbox.js"></script>
+  <script src="scripts/factories/medias.js"></script>
+  <script src="scripts/pages/photographer.js"></script>
+  <script src="scripts/utils/contactForm.js"></script>
+  <script src="scripts/utils/select.js"></script>
+
+</body>
+
 </html>
