rework imgs and add controls for videos

--- a/photographer.html
+++ b/photographer.html
@@ -22,7 +22,7 @@
     <div class="pictures" aria-label="photo de profil" role="img">
     </div>
 
-    <span>Trier par</span>
+    <span class="custom-select-title">Trier par</span>
     <div class="custom-select">
       <select name="" id="">
         <option value="1" id="titre">Titre</option>
