fix dispaly lightbox errors

--- a/photographer.html
+++ b/photographer.html
@@ -22,13 +22,15 @@
     <div class="pictures" aria-label="photo de profil" role="img">
     </div>
 
-    <span class="custom-select-title">Trier par</span>
-    <div class="custom-select">
-      <select name="" id="">
-        <option value="1" id="titre">Titre</option>
-        <option value="2" id="date">Date</option>
-        <option value="3" id="likes">Popularité</option>
-      </select>
+    <div class="sort-container">
+      <span class="custom-select-title">Trier par</span>
+      <div class="custom-select">
+        <select name="" id="">
+          <option value="1" id="titre" class="first-option">Titre</option>
+          <option value="2" id="date">Date</option>
+          <option value="3" id="likes">Popularité</option>
+        </select>
+      </div>
     </div>
 
     <div class="pictures_medias"></div>
