improve accessibility for index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img src="assets/images/logo.png" class="logo"
+    <img src="assets/images/logo.png" class="logo" tabindex="0"
       aria-label="logo Fisheye rouge, un appareil photo remplace la première lettre e" role="img" alt="" />
     <h1 aria-label="title" role="titre de la page">Nos photographes</h1>
   </header>
