--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -12,10 +12,10 @@
 <body>
   <header>
     <img src="assets/images/logo.png" class="logo" tabindex="0"
-      aria-label="logo Fisheye rouge, un appareil photo remplace la première lettre e" role="img" alt="" />
-    <h1 aria-label="title" role="titre de la page">Nos photographes</h1>
+      aria-label="logo Fisheye rouge, un appareil photo remplace la première lettre e" alt="logo fisheye">
+    <h1 aria-label="title">Nos photographes</h1>
   </header>
-  <main id="main" aria-label="contenu principal" role="main">
+  <main id="main" aria-label="contenu principal">
     <div class="photographer_section" aria-label="ensemble des photographes" role="presentation">
     </div>
   </main>
