changes for esLint conforming

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="photographer_section" aria-label="ensemble des photographes" role="presentation">
     </div>
   </main>
-  <script src="scripts/factories/photographer.js"></script>
-  <script src="scripts/pages/index.js"></script>
+  <script type="module" src="scripts/factories/photographer.js"></script>
+  <script type="module" src="scripts/pages/index.js"></script>
 </body>
 
 </html>
