--- a/photographer.html
+++ b/photographer.html
@@ -184,12 +184,12 @@
 
   </div>
   <!-- Script -->
-  <script src="scripts/factories/medias.js"></script>
-  <script src="scripts/utils/contactForm.js"></script>
-  <script src="scripts/utils/select.js"></script>
-  <script src="scripts/utils/sliders.js"></script>
-  <script src="scripts/utils/like.js"></script>
-  <script src="scripts/pages/photographer.js"></script>
+  <script type ="module" src="scripts/factories/medias.js"></script>
+  <script type="module" src="scripts/utils/contactForm.js"></script>
+  <script type="module" src="scripts/utils/select.js"></script>
+  <script type="module" src="scripts/utils/sliders.js"></script>
+  <script type="module" src="scripts/utils/like.js"></script>
+  <script type="module" src="scripts/pages/photographer.js"></script>
 </body>
 
 </html>
