change visibility for contact

--- a/photographer.html
+++ b/photographer.html
@@ -130,7 +130,7 @@
 
       <header id="contact__header" class="contact__header">
         <h2 class="contact__header__title">Contactez-moi</h2>
-        <h2 id="contact-photographer-name" class="contact__header__title"></h2>
+        <h2 id="contact-photographer-name" class="contact__header__title" aria-hidden="true"></h2>
       </header>
 
       <form action="photographer.html" method="get" class="form contact-form">
